lang/lc/tests/err_cylic_types.sys
type a = b;
type b = c;
type c = d;
type d = a;

system test()
{
	a bar = true;
}
